--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   dio: ^5.7.0
   shared_preferences: ^2.3.3
   uuid: ^4.5.1
+  flutter_markdown: ^0.7.4+3
 
 dev_dependencies:
   flutter_test:
